tests/rosetta/out/Rust/chinese-remainder-theorem.error
rustc error: exit status 1
error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenchinese-remainder-theorem2170629998/001/prog.rs:11:24
   |
11 |         return vec![g, (y1 as f64) - ((b as f64) / (a as f64)) * x1 as f64, x1];
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `f64`

error[E0277]: cannot calculate the remainder of `f64` divided by `i32`
  --> /tmp/TestMochiRustGoldenchinese-remainder-theorem2170629998/001/prog.rs:37:32
   |
37 |             let inv = modInv(p % ni, ni);
   |                                ^ no implementation for `f64 % i32`
   |
   = help: the trait `Rem<i32>` is not implemented for `f64`
   = help: the following other types implement trait `Rem<Rhs>`:
             `&f64` implements `Rem<f64>`
             `&f64` implements `Rem`
             `f64` implements `Rem<&f64>`
             `f64` implements `Rem`

error[E0277]: cannot multiply `i32` by `f64`
  --> /tmp/TestMochiRustGoldenchinese-remainder-theorem2170629998/001/prog.rs:38:25
   |
38 |             x = (x + ai * inv as f64) * p;
   |                         ^ no implementation for `i32 * f64`
   |
   = help: the trait `Mul<f64>` is not implemented for `i32`
   = help: the following other types implement trait `Mul<Rhs>`:
             `&i32` implements `Mul<i32>`
             `&i32` implements `Mul`
             `i32` implements `Mul<&i32>`
             `i32` implements `Mul`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
